--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Sunny Spells";
+    src: url(./fonts/Sunny-Spells.ttf);
+}
+
+:root {
+    font-family: "Sunny Spells";
+}
+
 .books {
     display: flex;
     justify-content: center;
